--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 html{
     /* text-decoration: none; */
+    scroll-behavior: smooth;
 }
 
 body{
@@ -30,6 +31,21 @@ body{
 p{
     line-height: 2.3rem;
 }
+
+button{
+    background: var(--btn-bg-color);
+    border: 0;
+    border-radius: 5px;
+    padding: 7px;
+    text-align: center;
+    cursor: pointer;
+    color: var(--text-color);
+}
+
+button:hover{
+    background-color: rgba(247, 153, 66,0.7);
+}
+
 
 .wrapper{
     width: 100%;
@@ -196,21 +212,12 @@ header{
     /* max-height: fit-content; */
 }
 
+
 .register{
-    background: var(--btn-bg-color);
-    border: 0;
-    border-radius: 5px;
-    padding: 7px;
     margin: 20px 0;
-    color: var(--text-color);
     width: 12rem;
-    text-align: center;
-    cursor: pointer;
 }
 
-.register:hover{
-    background-color: rgba(247, 153, 66,0.7);
-}
 
 /*BELOW HEADER*/
 .about{
@@ -594,7 +601,7 @@ header{
     flex-direction: column;
     width: 70%;
     margin: auto;
-    border: 2px solid green;
+    /* border: 2px solid green; */
     background-color: var(--light-bg-color);
     border-radius: 12px;
     padding: 20px;
@@ -629,9 +636,6 @@ header{
     border-radius: 20px;
     /* border: 2px solid red; */
     padding: 12px;
-    /* display: flex;
-    flex-direction: column; */
-    /* align-items: center; */
 }
 
 .social-icons-row{
@@ -650,6 +654,200 @@ header{
     border-radius: 5px;
     padding: 5px 0;
     /* margin: auto; */
+}
+
+.faq-container h2{
+    font-size: 2rem;
+    text-align: center;
+    margin: 70px 0;
+}
+
+.faq-container{
+    width: 70%;
+    margin: 0 auto;
+    transform: translateY(-60%);
+    /* border: 2px solid firebrick; */
+}
+
+.accordion-tabs{
+    margin: 25px 0;
+    border-radius: 20px;
+    /* border: 3px solid green; */
+}
+
+.accordion-tabs>*{
+    padding: 10px 30px;
+}
+
+.tab-title{
+    background-color: var(--light-bg-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 10px 30px; */
+    border-radius: 20px 20px 0px 0px;
+    cursor: pointer;
+}
+
+.tab-notes{
+    background-color: var(--light-bg-color);
+    border-radius: 0px 0px 20px 20px;
+    display: none;
+}
+
+/*Another Section*/
+.course-fee{
+    background-color: var(--light-bg-color);
+    width: 100%;
+    height: 500px;
+    /* border: 2px solid red; */
+}
+
+.course-fee h2{
+    margin: 20px 0;
+    text-align: center;
+    padding: 30px;
+    /* border: 2px solid red; */
+}
+
+.achievements{
+    /* border-bottom: 1px solid var(--bg-silver-color); */
+    padding: 0 40px;
+    /* border: 1px solid brown; */    
+    width: 70%;
+    border-radius: 15px;
+    margin: auto;
+    transform: translateY(-50%);
+    background-color: var(--light-bg-color);
+    box-shadow: 0 12px 30px rgba(200, 200, 200, 0.4);
+}
+
+.achievements-first{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    /* border: 2px solid yellow; */
+}
+
+/* .achievements-list ul{
+    
+    /* list-style-position: outside; */
+    /* border: 2px solid blue; */
+    /* padding: 6px;
+} */
+
+.achievements-list ul li{
+    list-style-image: url("images/checkMark.png");
+    margin: 10px 0;
+    /* border: 2px solid red; */
+    padding: 5px;
+}
+
+.course-motto{
+    border-top: 1px solid var(--bg-silver-color);
+    text-align: center;
+    padding: 25px;
+    margin: 20px 0;
+}
+
+.register-course{
+    background-color: var(--bg-dark-color);
+    border-radius: 8px;
+    color: var(--light-bg-color);
+    padding: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.register-course span{
+    text-decoration-line: line-through;
+}
+
+.register-course>*{
+    margin: 8px 0;
+}
+
+.register-course button{
+    width: 70%;
+    margin: auto;
+}
+
+.request{
+    width: 100%;
+    background-color: var(--bg-dark-color);
+    height: 500px;
+    /* border: 2px solid green; */
+}
+
+.request-mail{
+    width: 70%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    color: var(--light-bg-color);
+    /* border: 2px solid greenyellow; */
+    height: inherit;
+}
+
+.request-mail>*{
+    flex: 1;
+    /* border: 2px solid blue; */
+    height: inherit;
+}
+
+.mail-form{
+    padding-top: 90px;
+    padding-left: 20px;
+}
+
+.mail-form>*{
+    margin: 20px 0;
+    /* height: 200px; */
+}
+
+.mail-form p{
+    font-size: 0.9rem;
+}
+
+.inp-grp input[type=email]{
+    border: 0;
+    border-radius: 8px;
+    background-color: rgba(200,200,200,0.45);
+    padding: 10px;
+    width: 80%;
+    color: var(--light-bg-color);
+    outline: none;
+}
+
+.response{
+    /* display: none; */
+}
+
+.response::before{
+    content: url(images/checkMark.png);
+    transform: translateX(-50%);
+}
+
+.mail-envelope{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid red; */
+    height: inherit;
+}
+
+.mail-envelope img{
+    display: block;
+    /* margin: auto; */
+}
+
+.mail-envelope-bg{
+    background: url(images/envelope_bg.png) no-repeat center;
+    background-position: center;
+    background-size: cover;
+    height: inherit;
 }
 
 
