--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: 'Dana Regular';
+    src: url("fontsused/dana/Dana\ Regular\ ttnorm.ttf");
+}
+@font-face {
+    font-family: 'Product Sans Bold';
+    src: url('fontsused/product-sans/Product\ Sans\ Bold.ttf');
+}
+
+@font-face {
+    font-family: 'Product Sans Regular';
+    src: url("fontsused/product-sans/Product\ Sans\ Regular.ttf");
+}
 
 
 *{
@@ -23,7 +36,7 @@ html{
 
 body{
     width: 100%;
-    font-family: lato;
+    font-family: 'Product Sans Regular',sans-serif;
     color: #000;
     /* margin: 0; */
 }
@@ -46,6 +59,9 @@ button:hover{
     background-color: rgba(247, 153, 66,0.7);
 }
 
+h1,h2,h3{
+    font-family: 'Product Sans Bold';
+}
 
 .wrapper{
     width: 100%;
@@ -61,15 +77,14 @@ header{
 }
 
 .navbar{
-    width: 80%;
+    width: 70%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* border: 2px solid red; */
+    border: 2px solid red;
     margin: auto;
-    padding: 0px 10px;
+    padding: 20px 10px;
     position: relative;
-
 }
 
 .logo{
@@ -88,6 +103,7 @@ header{
     display: flex;
     justify-content: space-evenly;
     width: 70%;
+    font-family: 'Dana Regular';
 }
 
 .nav-menu-link{
@@ -111,7 +127,7 @@ header{
 }
 
 .hamburger{
-    /* display: none; */
+    display: none;
     height: 3px;
     width: 30px;
     background-color: var(--light-bg-color);
@@ -208,7 +224,8 @@ header{
 
 .factory-uml figure img{
     display: block;
-    width: 80%;
+    width: 100%;
+    margin: auto;
     /* max-height: fit-content; */
 }
 
@@ -245,12 +262,11 @@ header{
 .about-graph{
     display: flex;
     justify-content: space-around;
-    /* border: 2px solid yellow; */
+    border: 2px solid yellow;
     width: 98%;
     margin: auto;
     /* border: 2px solid green; */
 }
-
 
 .about-graph>*{
     /* border: 1px solid green; */
@@ -417,14 +433,6 @@ header{
     position: relative;
 }
 
-.experience-container h2{
-    /* text-align: center; */
-    position: absolute;
-    top: 7.5%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
 .experience{
     display: flex;
     flex-direction: column;    
@@ -462,7 +470,7 @@ header{
     padding: 20px 0;
     font-size: 2em;
     /* border: 2px solid yellowgreen; */
-    line-height: 4.5rem;
+    line-height: 4.5vmax
     /* transform: translateY(55%); */
 }
 
@@ -472,6 +480,7 @@ header{
     align-items: center;
     border-radius: 8px 8px 8px 8px;
     border: 1px solid var(--bg-dark-color);
+    border: 2px solid ;
     margin: 2rem 0;
 }
 
@@ -501,18 +510,35 @@ header{
     padding: 8px;
 }
 
+.pixs{
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .nav-pill-slide .pixs img{
     display: block;
+    /* height: inherit; */
+    
+    /* width: 100%; */
     /* width: 170px; */
     /* border: 2px solid slateblue; */
 }
 
 .nav-pill-slide p{
-    font-size: 1.5vmax;
+    font-size: 2.0vmax;
 }
 
-/***A NEW SECTION HERE
-**************/
+.experience-container h2{
+    text-align: center;
+    /* position: absolute; */
+    /* top: 7.5%; */
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
+    /* border: 2px solid red; */
+    margin: 20px;
+}
 
 .session{
     /* border: 2px solid red; */
@@ -535,6 +561,7 @@ header{
     background-color: var(--bg-silver-color);
     border-radius: 8px;
     padding: 10px;
+    /* border: 2px solid red; */
 }
 
 .session-headers::before{
@@ -575,6 +602,7 @@ header{
     display: flex;
     padding: 20px;
     justify-content: space-between;
+    /* border: 2px solid green; */
 }
 
 .session-facilitator{
@@ -600,7 +628,7 @@ header{
 
 .masters-faq{
     background-color: var(--bg-silver-color);
-    /* padding-top: 20%; */
+    padding: 50px 0;
 
 }
 
@@ -611,7 +639,7 @@ header{
 .masters-container{
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 78%;
     margin: auto;
     /* border: 2px solid green; */
     background-color: var(--light-bg-color);
@@ -630,6 +658,7 @@ header{
     justify-content: space-evenly;
     align-items: center;
     margin: 40px 0;
+    flex-wrap: wrap;
 }
 
 /* .masters-row-with-overlay:hover{
@@ -728,7 +757,7 @@ header{
 .achievements{
     /* border-bottom: 1px solid var(--bg-silver-color); */
     padding: 0 40px;
-    /* border: 1px solid brown; */    
+    /* border: 1px solid brown; */
     width: 70%;
     border-radius: 15px;
     margin: auto;
@@ -813,7 +842,7 @@ header{
 }
 
 .mail-form{
-    padding-top: 90px;
+    padding-top: 50px;
     padding-left: 20px;
 }
 
@@ -989,6 +1018,7 @@ header{
     /* justify-content: center; */
     /* flex-direction: row; */
     align-items: center;
+    /* border: 2px solid green; */
 }
 
 .circle{
@@ -1010,7 +1040,7 @@ header{
 .dashes{
     /* height: 2px; */
     border: 2px dashed black;
-    width: 300px;
+    width: 30vw;
 }
 
 .date-show{
@@ -1024,13 +1054,14 @@ header{
     background-color: var(--light-bg-color);
     display: flex;
     justify-content: space-around;
-    width: 25%;
+    width: 17vmax;
     font-size: 1.5em;
 }
 
 .left-days{
     display: flex;
     justify-content: center;
+    /* border: 2px solid yellow; */
 }
 
 .left-days>*{
@@ -1052,13 +1083,14 @@ footer{
     padding: 20px;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     margin: auto;
     /* border: 1px solid gold; */
 }
 
 .foot>*{
     /* border: 2px solid chartreuse; */
+    margin: 30px 0;
 }
 
 .s-icons{
@@ -1115,10 +1147,237 @@ footer{
     .nav-menu{
         display: none;
     }
+    .uiuxbrand{
+        display: block;
+    }
+    .about-overall{
+        transform: translate(0,0);
+        margin-top: 250px;
+    }
+    .about-graph{
+        display: block;
+    }
+    .about-cycle figure{
+        transform: translateY(0);
+    }
+    .about-bg h2{
+        transform: translate(0,0);
+    }
+    .social-icons{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .experience{
+        display: block;
+        transform: translateY(0%);
+        /*padding: 100px 0; */
+    }
+    .experience-container h2{
+        /* transform: translate(0,0); */
+        margin: 100px 0;
+        border: 1px solid orange;
+        /* transform: translate(0,-2000%); */
+    }
+    .nav-pill-item-container{
+        display: block;
+        /* border: 2px solid saddlebrown; */
+        margin-top: 40px;
+    }
+    .nav-pill-item{
+        display: block;
+        /* border: 2px solid red; */
+    }
+    .nav-pill-slide{
+        display: block;
+    }
+    
+    .session{
+        transform: translate(0,0);
+        /* border: 2px solid skyblue; */
+        margin-top: 30px;
+    }
+    .session-container{
+        /* flex-direction: row; */
+        /* border: 2px solid blue; */
+        display: flex;
+        flex-direction: row;
+    }
+    .session-headers{
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    .session h2{
+        /* border: 1px solid chartreuse; */
+    }
+    .session-body{
+        flex-direction: column;
+    }
+    .session-headers::before{
+        display: none;
+    }
+    .session-header-rest{
+        flex-direction: column;
+        /* justify-content: flex-start; */
+    }
+    .masters-faq{
+        margin: 40px;
+    }
+    .masters-container{
+        /* flex-direction: row-reverse; */
+        transform: translate(0,0);
+    }
+    .faq-container{
+        transform: translate(0,0);
+    }
+
+
+    .achievements{
+        transform: translate(0,0);
+    }
+
+    .course-fee{
+        min-height: 160vh;
+    }
+
+    .achievements-first{
+        display: block;
+    }
+    .request{
+        height: 100vmax;
+    }
+    .request-mail{
+        flex-direction: column;
+    }
+
+    .request-mail>*{
+        /* border: 1px solid red; */
+        height: 45vmax;
+    }
+
+    .pro-body{
+        flex-direction: column;
+    }
+
+    .foot{
+        display: block;
+    }
 }
 
 @media(max-width: 660px){
     .uiuxbrand{
         display: block;
     }
+    .about-overall{
+        transform: translate(0,0);
+        margin-top: 250px;
+    }
+    .about-graph{
+        display: block;
+    }
+    .about-cycle figure{
+        transform: translateY(0);
+    }
+    .about-bg h2{
+        transform: translate(0,0);
+    }
+    .social-icons{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .experience{
+        display: block;
+        transform: translateY(0%);
+        /*padding: 100px 0; */
+    }
+    .experience-container h2{
+        /* transform: translate(0,0); */
+        margin: 100px 0;
+        border: 1px solid orange;
+        /* transform: translate(0,-2000%); */
+    }
+    .nav-pill-item-container{
+        display: block;
+        /* border: 2px solid saddlebrown; */
+        margin-top: 40px;
+    }
+    .nav-pill-item{
+        display: block;
+        /* border: 2px solid red; */
+    }
+    .nav-pill-slide{
+        display: block;
+    }
+    
+    .session{
+        transform: translate(0,0);
+        /* border: 2px solid skyblue; */
+        margin-top: 30px;
+    }
+    .session-container{
+        /* flex-direction: row; */
+        /* border: 2px solid blue; */
+        display: flex;
+        flex-direction: row;
+    }
+    .session-headers{
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    .session h2{
+        /* border: 1px solid chartreuse; */
+    }
+    .session-body{
+        flex-direction: column;
+    }
+    .session-headers::before{
+        display: none;
+    }
+    .session-header-rest{
+        flex-direction: column;
+        /* justify-content: flex-start; */
+    }
+    .masters-faq{
+        margin: 40px;
+    }
+    .masters-container{
+        /* flex-direction: row-reverse; */
+        transform: translate(0,0);
+    }
+    .faq-container{
+        transform: translate(0,0);
+    }
+
+    .achievements{
+        transform: translate(0,0);
+    }
+
+    .course-fee{
+        min-height: 160vh;
+    }
+
+    .achievements-first{
+        display: block;
+    }
+    .request{
+        height: 100vmax;
+    }
+    .request-mail{
+        flex-direction: column;
+    }
+
+    .request-mail>*{
+        /* border: 1px solid red; */
+        height: 45vmax;
+    }
+
+    .pro-body{
+        flex-direction: column;
+    }
+
+    .foot{
+        display: block;
+    }
+    
 }
